css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Arvo&family=Gruppo&family=Inclusive+Sans&family=Karla:ital,wght@1,500&family=Nixie+One&family=Noto+Sans+SC:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Arvo&family=Gruppo&family=Inclusive+Sans&family=Karla:ital,wght@1,500&family=Nixie+One&family=Noto+Sans+SC:wght@700&display=swap');

* {
  box-sizing: border-box;
}
 *:before, *:after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  font-family: "Poppins", sans-serif;
  height: 100vh;
  line-height: 1.3;
  background: #e3d4c0;
  overflow: hidden;
  text-rendering: geometricPrecision;
  -webkit-font-smoothing: antialiased;
}
#theme {
  width: 100vw;
  height: 100vh;
}
/* .dark-mode-theme body {
  background: #374049;
} */

/* a {
  text-decoration: none;
  color:azure;
  cursor: pointer;
} */


.material-menu-wrapper {
  position: absolute;
  bottom: 0;
  right: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.material-menu {
  position: relative;
  z-index: 1;
  width: 100%;
  height: 100%;
  background: transparent;
}

.material-btn {
  will-change: transform;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  position: absolute;
  z-index: 2;
  bottom: 25px;
  right: 25px;
  width: 75px;
  height: 75px;
  background: transparent;
  cursor: pointer;
}
.material-btn.active:before {
  transform: scale(18);
}
@media (min-height: 800px) {
  .material-btn.active:before {
    transform: scale(25);
  }
}
.material-btn:active:before {
  opacity: 0.75;
}
.material-btn:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  z-index: -3;
  width: 80px;
  height: 80px;
  background: #dbdfdf;
  border-radius: 80%;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
  cursor: pointer;
  transform-origin: center 70%;
  transform: scale(1);
  transition: all 0.35s ease-out;
}

.dark-mode-theme .material-btn:before {
  background:#3b3834;
}

.material-content {
  padding: 5% 15%;
  position: absolute;
  top: 0;
  right: 0;
  font-family: 'poppins', sans-serif;
  font-size: 100px;
}
.material-content.active {
  z-index: 3;
}

nav ul {
  list-style-type: none;
  padding: 0;
  text-align: right;
}
nav li {
  will-change: transform, opacity;
  margin: 15px 0;
  transform: translateX(100px);
  opacity: 0;
  transition: all 0.3s ease-out;
}
nav li.active {
  transform: translateX(0);
  opacity: 1;
}
nav li:nth-child(1) {
  transition-delay: 0.1s;
}
nav li:nth-child(2) {
  transition-delay: 0.2s;
}
nav li:nth-child(3) {
  transition-delay: 0.3s;
}
nav li:nth-child(4) {
  transition-delay: 0.4s;
}
nav a {
  text-decoration: none;
  font-size: 8vw;
  color: tomato;
  font-weight: 400;
  opacity: 80%;
}
nav a:hover {
  color: #374049;
}

.dark-mode-theme nav a:hover {
  color: azure;
}

.material-hamburger {
  transition: all 0.3s ease-out;
}
.material-hamburger .material-patty {
  will-change: transform, opacity;
  width: 40px;
  height: 3px;
  margin: 6px 0 8px 8px;
  background: #333333;
  opacity: 1;
  transform: translate(0) rotate(0deg);
  transition: all 0.2s ease-out;
}
.dark-mode-theme .material-hamburger .material-patty {
  background: #dbdfdf;
}
.material-hamburger .material-patty:last-child {
  margin-bottom: 0;
}
.material-hamburger.material-close {
  transform: rotate(-180deg);
}
.material-hamburger.material-close .material-patty:nth-child(1) {
  transform: translate(-10px, 4px) rotate(-45deg) scale(0.5, 1);
}
.material-hamburger.material-close .material-patty:nth-child(3) {
  transform: translate(-10px, -4px) rotate(45deg) scale(0.5, 1);
}

section {
  will-change: transform, opacity;
  width: 80vw;
  height: 100vw;
  padding: 12vw;
  overflow: hidden;
  transition: all 0.35s ease-out;
  line-height: .3;
}
section.active {
  opacity: 0;
  transform: translate(-700px, 0px);
}

.home-container h1 {
  white-space: nowrap;
  color: tomato;
  font-family: "Archivo Black", sans-serif;
  font-weight: 400;
  font-size: 7vw;
  opacity: 80%;
  text-align: left;
  letter-spacing: .05em;
  /* line-height: none; */
}
.home-title {
  color:azure;
}
.home-container h3 {
  color: #374049;
  text-align: left;
  font-size: 2em;
  font-weight: 200;
}
/* section h2 {
  color: white;
  font-size: 4em;
  font-weight: 300;
}  */
.slide-down {
  overflow: hidden;
  padding: 2em;
 }
.slide-down h2 {
  color:#374049;
  font-size: 1.2em;
  font-weight: 300;
  animation:2s slide-down 2s forwards;
  transform:translateY(-100%);
}
@keyframes slide-down {
to {
 transform:translateX(0%);
}
}
.dark-mode-theme .slide-down h2 {
  color:azure;
}
.header {
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-content: flex-start;
  margin-right: auto;
  padding: 1em;
}
.header.active {
  z-index: 3;
  pointer-events: none;
}
a.brand-btn {
  /* display: flex;
  justify-content: flex-start;
  flex-wrap: nowrap;
  align-content: flex-start;
  margin-right: auto; */
  text-decoration:underline;
  color:tomato;
  font-size: 4em;
  cursor: pointer;
}
.brand-btn:after {
  pointer-events: none;
  color:#dbdfdf;
}
.brand-btn:hover {
  color:azure;
}
a.brand2 {
  color: azure;
  font-size: 4em;
  text-decoration: underline;
  cursor: pointer;
}
.brand2:hover {
  color: tomato;
}

/* 
.brand-btn a.link {
  outline: none;
}



a:visited {
  color:#212529;
}

a:focus {
  text-decoration: none;
}

.link:hover {
  text-decoration: none;
}

.brand {
  color: tomato;
  font-size: 4em;
} */
 

/* .dark-mode-toggle {
  font-weight: 100;
  font-size: 1.2em;
  box-shadow: none; 
  border: 0px; 
  color:#dbdfdf;
} */

  #toggle-btn {
   display:flex;
   align-self:auto; 
   text-decoration: none;
   margin-left: 1em;
   font-weight: 100;
   font-size: 1.2em;
   box-shadow: none; 
   padding-top: 50px;
   border: 0px; 
   color:#374049;
   background:#e3d4c0;
   cursor: pointer;
  }

  #toggle-btn:hover {
    color:tomato;
    /* cursor: pointer; */
    opacity: 1rem;
    /* color: steelblue; */
  }
 

  a {
    text-decoration: none;
    color: azure;
  }
/* light mode */
.dark-mode-theme #toggle-btn {
  background: #333333;
  color:azure;
}
.dark-mode-theme {
  background:#333333;
  opacity:100%;
  color: var(--background-color);
}
.dark-mode-theme #toggle-btn:hover {
  color: tomato;
}
.dark-mode-theme .home-container h3 {
  color:azure;
  font-weight: 200;
}

